exercices/muschko/7/nginx-service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-fixed 
spec:
  type: NodePort
  selector:  
    tier: backend
    app: nginx
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
