exercices/muschko/7/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service 
spec:
  selector:
    tier: backend
    deployment: app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
